--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
     "cSpell.words": [
         "defcalculator",
         "freecodecamp",
+        "Gryffindor",
         "hellodef",
-        "helloname"
+        "helloname",
+        "Slytherin"
     ]
 }
